--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ body {
 }
 .wrapper .three {
   width: 100%;
-  background: url("https://kek.gg/i/79c-xJ.jpg");
+  background: url("https://i.imgur.com/FKe48JZ.jpg");
   background-size: cover;
   background-position: center;
   height: 300px;
